...
                icon: Icons.login_rounded,
                onPressed: onLoginPressed ??
                        () => _showComingSoonMessage(context, 'Login'),
              ),
              const SizedBox(height: 12),
              CarmaSecondaryButton(
                label: 'Konto erstellen',
                icon: Icons.person_add_alt_1_rounded,
                borderRadius: 24,
                padding: const EdgeInsets.symmetric(
                  horizontal: 18,
                  vertical: 18,
                ),
...
